[project]
name = "openstack-lb-info"
description = "A script to display OpenStack Load Balancer resource details."
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.7"
authors = [
    {name = "Thobias Salazar Trevisan"},
]

[project.scripts]
openstack-lb-info = "openstack_lb_info.main:main"

[project.urls]
"Homepage" = "https://github.com/thobiast/openstack-loadbalancer-info"
"Source" = "https://github.com/thobiast/openstack-loadbalancer-info"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "openstack_lb_info.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100

[tool.pylint]
max-line-length = 100
disable = [
    "C0103", # (invalid-name)
]
